# GCodePlaner

./: CMakeLists.txt  GCodePlaner.pro  ecnc2math.c  ecnc2math.h  gcodepath.cpp  gcodepath.h  gcodeplaner.cpp  gcodeplaner.h  gcodeplaner.ui  main.cpp  pathmanager.cpp  pathmanager.h  shapemonitor.cpp  shapemonitor.h  shapemonitor.ui  torch.cpp  torch.h  workpiece.cpp  workpiece.h  workpiecedata.cpp  workpiecedata.h
gcode/: GCodeDefine.h  GCodeParser.cpp  GCodeParser.h  GCommand.cpp  GCommand.h  deslaggingcode.cpp  deslaggingcode.h
gcode_math/: ecnc2math.c  math_object.cpp  math_object.h
librecad/actions/: rs_actionzoomin.h  rs_actionzoompan.cpp
librecad/actions/zoom/: rs_actionzoomscroll.cpp
librecad/lib/actions/: rs_actioninterface.cpp  rs_actioninterface.h  rs_snapper.cpp  rs_snapper.h
librecad/lib/engine/: rs_dimension.cpp  rs_entitycontainer.cpp  rs_entitycontainer.h  rs_graphic.cpp  rs_graphic.h  rs_layerlist.cpp  rs_undo.cpp
librecad/lib/gui/: rs_eventhandler.cpp  rs_graphicview.cpp  rs_graphicview.h  rs_grid.cpp
librecad/res/icons/: icons.qrc
librecad/ui/: lc_actionfactory.cpp  lc_widgetfactory.cpp  lc_widgetfactory.h  qg_actionhandler.cpp  qg_actionhandler.h  qg_graphicview.cpp  qg_graphicview.h
neomath/: ecnc2math.h  neomath.cpp  neomath.h
testcode/: 5 MM-22.CNC  circle3.txt  cockF500.txt  matrix.txt
